2005-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/mkmf-gnome2.rb: Change checking-rules order.
	Added GTK_BASE_PATH environment variable option for Win32.
	* src/rbglib.c, rbglib_convert.c, rbgutil.h, rbgobject.h: 
	Remove to include glib.h directly.

2005-01-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_messages.c: Fix segfault, and make it simple.
	Now it doesn't raise Exception, because of bad influence to
	other libs such as gnomeprint.

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes.
	* src/lib/pkgconfig.rb: Separated from mkmf-gnome2.rb.

2005-01-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_message.c, rbglib_spawn.c, rbgobject.c, rbgobj_boxed.c, 
	rbgobj_closure.c,rbgobj_enums.c,rbgobj_object.c, rbgobj_type.c, 
	src/lib/mkmf-gnome2.rb: Support MS VC++.
	* src/lib/mkmf-gnome2.rb: Added setup_win32, add_depend_package.
	* src/glib.def: Added rbgobj_register_class.

2005-01-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/glib2.rb: Remove $KCODE="U". Reported by Dafydd Harries.
	Added header information.

2005-01-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/glib2.rb: Improved error handling. 
	* src/rbglib_messages.c: ditto. 
	* src/rbgobj_strv.c: Added for GLib-2.4.x. Support GStrv as Array.
	* src/rbgobject.c: Support GStrv.

2004-11-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_messages.c, src/lib/glib2.rb: 
	Rewrite code to C for stablity.

2004-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h: Increment version information. 

2004-11-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_messages.c: Works again for ruby-1.8.x. 
	Reported by Kohei Sutou.

2004-10-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_messages.c: Check the paratmeter is Block or not. 

2004-10-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/glib2.rb: Added GLib.check_binding_version?
	* src/rbglib_utils.c: GLib.check_version: Use static variables
	instead of MACROS.