@@ -1,3 +1,11 @@
+2005-02-09  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/lib/glib2.rb: Fix the default error level.
+
+2005-02-02  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* src/rbglib_messages.c: Fix a compiling warning on Cygwin.
+
 2005-02-01  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/lib/mkmf-gnome2.rb: Change checking-rules order.
